# Fanfiction-Finder

./: .dockerignore  .env.ex  Dockerfile  Fanfiction-Finder.service  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  config.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_prod.txt  run.sh
adapters/: adapter_archiveofourown.py  adapter_fanfictionnet.py  adapter_fichub.py
cogs/: help.py  link.py  settings.py
data/: live_channels.txt  local_channels.txt  status_quotes.txt
scripts/: update_bots.sh
utils/: ao3_metadata_processing.py  bot_status.py  bot_uptime.py  embed_pages.py  logging.py  metadata.py  metadata_processing.py  processing.py  search.py
