[tool.poetry]
name = "Fanfiction-Finder"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^3.0.1"
attrs = "^21.4.0"
beautifulsoup4 = "^4.10.0"
certifi = "^2021.10.8"
chardet = "^4.0.0"
cloudscraper = "^1.2.60"
Flask = "^2.0.3"
idna = "^3.3"
loguru = "^0.6.0"
multidict = "^6.0.2"
pyparsing = "^3.0.7"
python-dateutil = "^2.8.2"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
requests-toolbelt = "^0.9.1"
soupsieve = "^2.3.1"
typing-extensions = "^4.1.1"
urllib3 = "^1.26.9"
waitress = "^2.1.1"
aiohttp = "3.7.4.post0"
py-cord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
