[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fanfiction-finder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.6",
    "beautifulsoup4>=4.10.0",
    "certifi>=2023.7.22",
    "charset-normalizer>=3.3.2",
    "discord.py>=2.3.2",
    "loguru>=0.7.0",
    "python-dateutil>=2.8.1",
    "python-dotenv>=0.17.1",
    "requests>=2.31.0",
    "typing_extensions>=4.1.1",
    "urllib3>=2.0.7",
    "yarl>=1.9.2",
]

[tool.black]
skip-string-normalization = true

[tool.ruff.format]
quote-style = "single"