[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fanfiction-finder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "discord.py",
    "loguru",
    "python-dotenv",
    "requests",
]

[tool.setuptools.packages.find]
include = ["adapters*", "cogs*", "utils*"]

[tool.black]
skip-string-normalization = true

[tool.ruff.format]
quote-style = "single"